--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <header class="header">
         <img src="images/logo_place_header.svg" class="logo_place_header logo" alt="Логотип сайта">
-        <h1 class="header__tittle">Научиться учиться</h1>
-        <p class="header__subtittle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link link" href="#">  Узнать &rarr;</a></p>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link link" href="#">  Узнать &rarr;</a></p>
         <img class="header__main-illustration" src="images/header-image.png" alt="Мальчик">
         <div class="header__square-pic"></div>
     </header>
@@ -25,21 +25,21 @@
     <main class="content">
 
         <section class="description">
-            <div class="description__two-columns">
-                <h3 class="description__brief">Главные проблемы в обучении</h3>
-                <div class="description__main-text">
-                    <p class="description__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+            <div class="two-columns">
+                <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+                <div class="two-columns__main-text">
+                    <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
                         Зубрежка быстро выветривается и не приносит пользы.
                     </p>
-                    <p class="description__paragraph"><span class="description__span">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-                    <p class="description__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+                    <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+                    <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
                 </div>
             </div>
         </section>
 
         <section class="digits">
             <h2 class="section-title">Цифры и факты</h2>
-            <h3 class="section-subtitle">Про учёбу и мозг</h3>
+            <p class="section-subtitle">Про учёбу и мозг</p>
 
             <div class="table">
 
@@ -90,14 +90,14 @@
 
         <section class="feynman">
             <h2 class="feynman__title">Метод Фейнмана</h2>
-            <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+            <p class="feynman__subtitle">Выучить и не забыть.</p>
             <a class="feynman__link link" href="#">Подробнее &rarr;</a>
-            <div class="feynman__bg-image"></div>
+
         </section>
 
         <section class="kaufman">
-            <h2 class="section-title section-title_theme_dark">Принцыпы обучения</h2>
-            <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+            <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+            <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
 
             <div class="table  table_theme_dark">
 
@@ -164,50 +164,37 @@
         <div class="footer__columns">
             <div class="footer__column_content_copyright footer__column">
                 <img src="images/logo_place_footer.svg" class="logo_place_footer logo" alt="логотип сайта" />
-                <div class="footer__author"> &#169;2021. Цверошвили Павел</div>
+                <p class="footer__author"> &#169;2021. Цверошвили Павел</p>
             </div>
 
             <nav class="footer__column_content_info footer__column">
-                <h4 class="footer__column-heading">О практикуме</h4>
+                <h2 class="footer__column-heading">О практикуме</h2>
                 <ul class="footer__column-links">
-                    <li><a class="footer__link link" href="#">Главная</a></li>
-                    <li><a class="footer__link link" href="#">Концепция</a></li>
-                    <li><a class="footer__link link" href="#">Наставники</a></li>
+                    <li><a class="footer__column-link link" href="#">Главная</a></li>
+                    <li><a class="footer__column-link link" href="#">Концепция</a></li>
+                    <li><a class="footer__column-link link" href="#">Наставники</a></li>
                 </ul>
 
             </nav>
 
             <nav class="footer__column_content_social footer__column">
-                <h4 class="footer__column-heading">Соцсети</h4>
+                <h2 class="footer__column-heading">Соцсети</h2>
                 <ul class="footer__column-links">
                     <li>
-                        <a href="https://www.facebook.com"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Фэйсбук"></a>
-                        <a class="footer__link link footer__link_to-right" href="https://www.facebook.com/"> Facebook</a>
+                        <a class="footer__column-link link" href="https://www.facebook.com"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Фейсбук">Facebook</a>
                     </li>
 
                     <li>
-                        <a href="https://vk.com"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВКонтакте"></a>
-                        <a class="footer__link link footer__link_to-right" href="https://www.facebook.com/"> ВКонтакте</a>
+                        <a class="footer__column-link link" href="https://vk.com"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a>
                     </li>
 
                     <li>
-                        <a href="https://www.instagram.com"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Инстаграмм"></a>
-                        <a class="footer__link link footer__link_to-right" href="https://www.facebook.com/"> Instagram</a>
-
+                        <a class="footer__column-link link" href="https://www.instagram.com"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Инстаграмм">Instagram</a>
                     </li>
-
                 </ul>
-
             </nav>
-
-
         </div>
-
-
     </footer>
-
-
-
 </body>
 
 </html>
