--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pages/index.css">
 
-    <link rel="stylesheet" href="./styles/style.css">
-
 
     <title>Научиться учиться</title>
 </head>
@@ -116,20 +114,20 @@
             <h2 class="section-title">Цифры и факты</h2>
             <p class="section-subtitle">Про учёбу и мозг</p>
 
-            <div class="table ">
+            <div class="table">
 
-                <div class="table__cell ">
-                    <h4 class="table__heading ">86 миллиардов</h4>
+                <div class="table__cell">
+                    <h4 class="table__heading">86 миллиардов</h4>
                     <p class="table__text ">Число нейронов в мозге человека</p>
                 </div>
 
-                <div class="table__cell ">
-                    <h4 class="table__heading ">2.1 миллиарда</h4>
-                    <p class="table__text ">Число нуждающихся в повышении квалификации</p>
-                    <p class="table__text ">Всемирный Банк, 2017</p>
+                <div class="table__cell">
+                    <h4 class="table__heading">2.1 миллиарда</h4>
+                    <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                    <p class="table__text">Всемирный Банк, 2017</p>
                 </div>
 
-                <div class="table__cell ">
+                <div class="table__cell">
                     <h4 class="table__heading ">1000 терабайт</h4>
                     <p class="table__text ">Объём памяти человека</p>
                 </div>
@@ -272,8 +270,8 @@
     <footer class="footer">
         <div class="footer__columns">
             <div class="footer__column_content_copyright footer__column">
-                <img src="images/logo_place_footer.svg" class="logo_place_footer logo " alt="логотип сайта" />
-                <p class="footer__author "> &#169;2021. Цверошвили Павел</p>
+                <img src="images/logo_place_footer.svg" class="logo logo_place_footer" alt="логотип сайта" />
+                <p class="footer__author"> &#169;2021. Цверошвили Павел</p>
             </div>
 
             <nav class="footer__column_content_info footer__column">
